--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,7 @@
 name: "Yay internet!"
 output_dir: "."
 navbar:
-  title: "Home"
+  title: "Huijuan Zhang"
   right:
     - text: "About"
       href: about.html
